# py-package-nlpengine

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Python-NLP.cpp  Python-NLP.h  README.md  bindings.cpp  pyproject.toml  requirements-dev.txt  setup.py  vcpkg.json
.github/workflows/: publish.yml  python-publish.yml  release.yml  test.yml  update-analyzers.yml  update-nlp-engine.yml
NLPPlus/: __init__.py  cloud.py  main.py
NLPPlus/analyzers/address-parser/input/text.txt_log/: output.json
NLPPlus/analyzers/basic/output/: final.tree
NLPPlus/analyzers/emailaddress/: README.md
NLPPlus/analyzers/links/: README.md
NLPPlus/analyzers/parse-en-us/: README.md
NLPPlus/analyzers/parse-en-us/output/: clause_ne.txt  dump.txt  final.tree  multi.txt  np.txt  tags.txt  wsd.txt
NLPPlus/analyzers/parse-en-us/spec/: displayKB.nlp
NLPPlus/analyzers/telephone/: README.md
analyzers/address-parser/: README.md
analyzers/address-parser/input/text.txt_log/: output.txt
analyzers/parse-en-us/spec/: analyzer.seq
tests/: test_engine.py  test_json.py
tests/data/: out.xml
tests/data/address-parser/input/text.txt_log/: ana017.kbb
tests/data/basic/text.txt_log/: final.tree
tests/data/emailaddress/text.txt_log/: output.json
tests/data/parse-en-us/input/: business.txt
tests/data/parse-en-us/output/: ana136.kbb  clause-fn-clause.txt  clause.txt  err.txt  err1.txt  location.txt  pos.txt  rule.txt  temporal.txt  unknown.txt
