[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "NLPPlus"
version = "1.1.0"
authors = [
    {name = "David De Hilster", email="contact@visualtext.org"}
]
description = "Python extension for the NLP++ text analysis engine"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build = [
      "cp310-*",
      "cp311-*",
      "cp312-*",
]
skip = [
     "cp*-macosx_x86_64",
     "cp*-macosx_arm64",
     "*_i686",
     "*musl*",
     "*-win32",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
