[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "NLPPlus"
dynamic = ["version"]
authors = [
    {name = "David De Hilster", email="contact@visualtext.org"}
]
description = "Python extension for the NLP++ text analysis engine"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["nlp", "text"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://visualtext.org/"
Repository = "https://github.com/VisualText/py-package-nlpengine"
Issues = "https://github.com/VisualText/py-package-nlpengine"


[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["NLPPlus/_version.py"]

[tool.setuptools_scm]
write_to = "NLPPlus/_version.py"

[tool.cibuildwheel]
build = [
      "cp310-*",
      "cp311-*",
      "cp312-*",
]
skip = [
     "cp*-macosx_arm64",
     "*_i686",
     "*musl*",
     "*-win32",
]
